5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1649_1053.log
== TEST (2019-04-05 20:30:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Digite seu patrono: ")
if(patrono = "cervo")
	mensagem = "cervo eh patrono do Harry Potter"
	

-- ERROR:
File "XXXX", line 5
    if(patrono = "cervo")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:30:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Digite seu patrono: ")
if(patrono = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	print(mensagem)
	

-- ERROR:
File "XXXX", line 5
    if(patrono = "cervo"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:31:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Digite seu patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	print(mensagem)
	

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:32:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Digite seu patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	print(mensagem)
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"
	print(mensagem)
	

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:33:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Digite seu patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	print(mensagem)
else:
	mensagem = patrono + " " + "nao eh patrono do Harry Potter"
	print(mensagem)
	

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:33:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Digite seu patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	print(mensagem)
else:
	mensagem = patrono + " " + "nao eh patrono do Harry Potter"
	print(mensagem)
	

-- EXECUTION TIME:
0.187132
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
